--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,33 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/guava-18.0.jar"/>
-	<classpathentry kind="lib" path="libs/xstream/lib/xstream-1.4.3.jar"/>
-	<classpathentry kind="lib" path="libs/xstream/lib/xstream-benchmark-1.4.3.jar"/>
-	<classpathentry kind="lib" path="libs/xstream/lib/xstream-hibernate-1.4.3.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/jdom-1.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/jettison-1.2.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/joda-time-1.6.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/json-20080701.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/kxml2-2.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/kxml2-min-2.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/stax-1.2.0.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/wstx-asl-3.2.7.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/xom-1.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/hibernate-core-4.1.4.Final.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/javassist-3.15.0-GA.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/jboss-transaction-api_1.1_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-1.4.3.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-benchmark-1.4.3.jar"/>
+	<classpathentry kind="lib" path="libs/xstream/xstream-hibernate-1.4.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
